# face_recognition

./: CMakeLists.txt  README.md  main.cc
app/: example.cc
data/database/: face.db
data/register_face_images/: conver.sh
include/: FaceCode.h  FaceDatabase.h  FaceManager.h  common.h
models/InspireFace/Megatron (2)/: _00_scrfd_2.5g_bnkps_shape160x160_fp16  _00_scrfd_2.5g_bnkps_shape640x640_fp16  _01_hyplmkv2_0.25_112x_fp16  __inspire__
models/InspireFace/Pikachu (2)/: _00_scrfd_500m_bnkps_shape160x160_fp16  _00_scrfd_500m_bnkps_shape320x320_fp16  _00_scrfd_500m_bnkps_shape640x640_fp16  _08_fairface_fp16  _10_emotion_fp16  __inspire__
src/: FaceCode.cc  FaceDatabase.cc  FaceManager.cc  FaceRecognizer.cc  FaceRecognizer.h  common.h  main.cpp
src/database/: CMakeLists.txt  DlibFaceDatabase.cc  DlibFaceDatabase.h  FaceDatabase.cc  FaceDatabase.h  InspireFaceDatabase.cc  InspireFaceDatabase.h  OpencvFaceDatabase.cc  OpencvFaceDatabase.h
src/dlib/: CMakeLists.txt  DlibFaceCoder.cc  DlibFaceCoder.h  DlibRecognizer.cc  DlibRecognizer.h  config.h
src/inspireface/: CMakeLists.txt  InspireFaceCoder.cc  InspireFaceCoder.h  InspireFaceRecognizer.cc  InspireFaceRecognizer.h  config.h
src/opencv/: CMakeLists.txt  OpencvFaceCoder.cc  OpencvFaceCoder.h  OpencvRecognizer.cc  OpencvRecognizer.h  config.h
